<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_signup_background"
    android:padding="15dp"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_bold"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvWelcomeMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_reguler"
                android:text="@string/welcome_message"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:fontFamily="@font/sora_regular"
                android:gravity="start|center"
                android:padding="10dp"
                android:hint="@string/hint_email"
                android:textColor="@color/dark_intense_blue"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWelcomeMessage"
                android:drawableTint="@color/dark_intense_blue"
                android:inputType="textEmailAddress"
                tools:ignore="SmallSp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_password"
                android:drawableEnd="@drawable/ic_visibility_on"
                android:drawablePadding="5dp"
                android:fontFamily="@font/sora_regular"
                android:gravity="start|center"
                android:hint="@string/hint_password"
                android:padding="10dp"
                android:textColor="@color/dark_blue"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmail"
                android:drawableTint="@color/dark_blue"
                android:inputType="textPassword"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:fontFamily="@font/sora_regular"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="@id/etPassword"
                app:layout_constraintTop_toBottomOf="@id/etPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                app:backgroundTint="@color/white"
                android:fontFamily="@font/sora_regular"
                android:text="@string/get_started"
                android:textSize="13sp"
                android:background="@drawable/rounded_button"
                android:textColor="@color/dark_low_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:fontFamily="@font/montserrat_reguler"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSignIn"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
